fixes display bug for collapsed items within a nested menu

--- a/assets/css/dulcet.style.css
+++ b/assets/css/dulcet.style.css
@@ -12692,19 +12692,29 @@ li.nav-header-gray {
   overflow: hidden;
   border-bottom: 1px dotted #ddd; }
 
-.nav-list > li.leaf a, .nav-list > li.expanded a {
+.nav-list > li.leaf a,
+.nav-list > li.collapsed a,
+.nav-list > li.expanded a {
   text-transform: uppercase;
   font-size: 16px;
   color: #333;
   padding-left: 0;
   padding-bottom: 7px;
   line-height: 1.3em; }
-  .nav-list > li.leaf a:hover, .nav-list > li.leaf a:focus, .nav-list > li.leaf a:active, .nav-list > li.expanded a:hover, .nav-list > li.expanded a:focus, .nav-list > li.expanded a:active {
+  .nav-list > li.leaf a:hover, .nav-list > li.leaf a:focus, .nav-list > li.leaf a:active,
+  .nav-list > li.collapsed a:hover,
+  .nav-list > li.collapsed a:focus,
+  .nav-list > li.collapsed a:active,
+  .nav-list > li.expanded a:hover,
+  .nav-list > li.expanded a:focus,
+  .nav-list > li.expanded a:active {
     background: #fafafa;
     margin-left: -14px;
     padding-left: 8px;
     border-left: 6px solid #eee; }
-  .nav-list > li.leaf a.active-trail, .nav-list > li.expanded a.active-trail {
+  .nav-list > li.leaf a.active-trail,
+  .nav-list > li.collapsed a.active-trail,
+  .nav-list > li.expanded a.active-trail {
     background: #f5f5f5;
     margin-left: -14px;
     padding-left: 8px;
